grammar.ebnf
(* Caelum Stage 1 grammar. Whitespace between tokens is ignored. *)

program          = { statement } ;

statement        = declaration
                 | assignment
                 | if_statement ;

declaration      = declaration_kind, type_name, identifier, "=", expression, "." ;
declaration_kind = "fixed" | "calm" | "flow" ;
type_name        = "☼" | "☽" | "☁︎" ;

assignment       = identifier, "=", expression, "." ;

if_statement     = "when", expression, block, [ "otherwise", block ] ;
block            = "⟨", statement, { statement }, "⟩" ;

expression       = comparison ;
comparison       = primary, [ comparison_operator, primary ] ;
comparison_operator = "==" | "!=" ;

primary          = integer_literal
                 | boolean_literal
                 | identifier ;

boolean_literal  = "light" | "dark" ;
integer_literal  = [ "-" ], digit, { digit } ;

identifier       = letter, { letter } ;
letter           = "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J"
                 | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T"
                 | "U" | "V" | "W" | "X" | "Y" | "Z"
                 | "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j"
                 | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t"
                 | "u" | "v" | "w" | "x" | "y" | "z" ;

digit            = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;
